@@ -1,8 +1,8 @@
 package jw795.optimizer;
 
-import jw795.assembly.AAInstruction;
-import jw795.assembly.AAMove;
-import jw795.assembly.AAOperand;
+import jw795.asmgenerator.TempSpiller;
+import jw795.asmgenerator.Tiler;
+import jw795.assembly.*;
 import jw795.assembly.AAReg;
 import jw795.assembly.AATemp;
 import jw795.cfg.AsmCFG;
@@ -41,9 +41,11 @@ public class RegisterAllocator {
 
     HashMap<AAOperand, NodeColor> color;
 
-    int K = 16; //number of usable registers
+    TempSpiller tmpsp;
 
-    public RegisterAllocator(List<AAInstruction> instructionList) {
+    int K = 14; //number of usable registers
+
+    public RegisterAllocator(List<AAInstruction> instructionList, TempSpiller tempSpiller) {
         this.instructionList = instructionList;
         this.liveVar = new HashMap<>();
         this.precolored = new HashSet<>();
@@ -66,10 +68,22 @@ public class RegisterAllocator {
         this.moveList = new HashMap<>();
         this.alias = new HashMap<>();
         this.color = new HashMap<>();
+        this.tmpsp = tempSpiller;
     }
 
-    public void registerAllocate() {
+    public List<AAInstruction> registerAllocate() {
         livenessAnalysis();
+        for (HashSet<AAOperand> in : liveVar.values()) {
+            for (AAOperand o : in) {
+                if (o instanceof AATemp) {
+                    initial.add(o);
+                }
+                if (o instanceof AAReg) {
+                    precolored.add(o);
+                    color.put(o, ((AAReg) o).toColor());
+                }
+            }
+        }
         build();
         makeWorklist();
         while (!(simplifyWorklist.isEmpty() && worklistMoves.isEmpty() && freezeWorklist.isEmpty() && spillWorklist.isEmpty())) {
@@ -80,9 +94,11 @@ public class RegisterAllocator {
         }
         assignColors();
         if (!spilledNodes.isEmpty()) {
-            rewriteProgram(spilledNodes);
+            rewriteProgram();
             registerAllocate();
         }
+        allocateAndRemove();
+        return instructionList;
     }
 
     public void livenessAnalysis() {
@@ -93,36 +109,20 @@ public class RegisterAllocator {
     }
 
     public void build() {
-        HashSet<AAOperand> initializedOp = new HashSet<>();
-
         for (AAInstruction ins : instructionList) {
             CFGNode<AAInstruction> node = cfg.getNode(ins);
             HashSet<AAOperand> live = new HashSet<>();
             for (CFGNode<AAInstruction> suc : node.getSuccessors()) {
+                System.out.println(ins);
                 live.addAll(liveVar.get(suc));
             }
-
-            //initialize correct starting set for each unique reg/temp operand
-            for (AAOperand op : getAllRegsOrTemps(ins)){
-                if (!initializedOp.contains(op)){
-                    if (op instanceof AAReg){
-                        precolored.add(op);
-                    } else {
-                        initial.add(op);
-                    }
-                    adjList.put(op, new HashSet<>());
-                    degree.put(op, 0L);
-                    initializedOp.add(op);
-                }
-            }
-
             if (ins instanceof AAMove) {
                 live.removeAll(ins.use());
                 HashSet<AAOperand> mentioned = new HashSet<>();
                 mentioned.addAll(ins.def());
                 mentioned.addAll(ins.use());
                 for (AAOperand n : mentioned) {
-                    HashSet<AAMove> newMoveList = new HashSet<>(moveList.get(n));
+                    HashSet<AAMove> newMoveList = new HashSet<>(moveList.getOrDefault(n, new HashSet<>()));
                     newMoveList.add((AAMove) ins);
                     moveList.put(n, newMoveList);
                 }
@@ -166,12 +166,20 @@ public class RegisterAllocator {
             adjSet.add(new GraphEdge(v, u));
 
             if (!precolored.contains(u)){
-                adjList.get(u).add(v);
-                degree.put(u, degree.get(u)+1);
+                if (adjList.containsKey(u)) {
+                    adjList.get(u).add(v);
+                } else {
+                    adjList.put(u, new HashSet<>(List.of(v)));
+                }
+                degree.put(u, degree.getOrDefault(u, 0L)+1);
             }
             if (!precolored.contains(v)){
-                adjList.get(v).add(u);
-                degree.put(v, degree.get(v)+1);
+                if (adjList.containsKey(v)) {
+                    adjList.get(v).add(u);
+                } else {
+                    adjList.put(v, new HashSet<>(List.of(u)));
+                }
+                degree.put(v, degree.getOrDefault(v, 0L)+1);
             }
         }
     }
@@ -221,9 +229,9 @@ public class RegisterAllocator {
 
     private void decrementDegree(AAOperand m) {
         Long d = degree.get(m);
-        degree.put(m, degree.get(m)-1);
+        degree.put(m, d-1);
         if (d == K){
-            HashSet adjNodes = adjacent(m);
+            HashSet<AAOperand> adjNodes = adjacent(m);
             adjNodes.add(m);
             enableMoves(adjNodes);
             spillWorklist.remove(m);
@@ -254,8 +262,7 @@ public class RegisterAllocator {
     }
 
     private boolean ok(AAOperand t, AAOperand r){
-        // TODO: double check adjSet.contains(new GraphEdge) would work: compare by value
-        return degree.get(r) < K && precolored.contains(t) && adjSet.contains(new GraphEdge(t, r));
+        return degree.get(t) < K || precolored.contains(t) || adjSet.contains(new GraphEdge(t, r));
     }
 
     private boolean conservative(HashSet<AAOperand> nodes){
@@ -270,47 +277,42 @@ public class RegisterAllocator {
 
     public void coalesce() {
         //conservative coalescing
-        AAMove m = worklistMoves.stream().findFirst().orElse(null);
+        AAMove m = worklistMoves.iterator().next();
+        AAOperand x = m.operand1.get();
+        AAOperand y = m.operand2.get();
 
-        if (m != null) {
+        // getAlias of node corresponding to the AAexpr
+        x = getAlias(x);
+        y = getAlias(y);
 
-            AAOperand xOp = m.operand1.get();
-            AAOperand yOp = m.operand2.get();
-
-            // getAlias of node corresponding to the AAexpr
-            AAOperand x = getAlias(xOp);
-            AAOperand y = getAlias(yOp);
-
-            AAOperand u;
-            AAOperand v;
-            if (precolored.contains(y)) {
-                u = y;
-                v = x;
-            } else {
-                u = x;
-                v = y;
-            }
-
-            worklistMoves.remove(m);
-
-            if (u.equals(v)) {
-                coalescedMoves.add(m);
-                addWorkList(u);
-            } else if (precolored.contains(v) || adjSet.contains(new GraphEdge(u, v))) {
-                constrainedMoves.add(m);
-                addWorkList(u);
-                addWorkList(v);
-            } else if ((precolored.contains(u) && adjacent(u).stream().allMatch(entry -> ok(entry, u)))
-                    || (!precolored.contains(u) && conservative(union(adjacent(u), adjacent(v))))) {
-                constrainedMoves.add(m);
-                combine(u, v);
-                addWorkList(u);
-            } else {
-                activeMoves.add(m);
-            }
+        AAOperand u;
+        AAOperand v;
+        if (precolored.contains(y)) {
+            u = y;
+            v = x;
         } else {
-            return;
+            u = x;
+            v = y;
         }
+
+        worklistMoves.remove(m);
+
+        if (u.equals(v)) {
+            coalescedMoves.add(m);
+            addWorkList(u);
+        } else if (precolored.contains(v) || adjSet.contains(new GraphEdge(u, v))) {
+            constrainedMoves.add(m);
+            addWorkList(u);
+            addWorkList(v);
+        } else if ((precolored.contains(u) && (adjacent(v).stream().allMatch(entry -> ok(entry, u))))
+                || (!precolored.contains(u) && conservative(union(adjacent(u), adjacent(v))))) {
+            constrainedMoves.add(m);
+            combine(u, v);
+            addWorkList(u);
+        } else {
+            activeMoves.add(m);
+        }
+
 
     }
 
@@ -323,7 +325,7 @@ public class RegisterAllocator {
         coalescedNodes.add(v);
         alias.put(v, u);
         moveList.put(u, union(moveList.get(u), moveList.get(v)));
-        enableMoves(new HashSet<>(Arrays.asList(v)));
+        enableMoves(new HashSet<>(List.of(v)));
 
         for (AAOperand t : adjacent(v)){
             addEdge(t, u);
@@ -344,9 +346,7 @@ public class RegisterAllocator {
     }
 
     public void freeze() {
-        AAOperand u = freezeWorklist.stream().findFirst().orElse(null);
-        if (u == null) return;
-        
+        AAOperand u = freezeWorklist.iterator().next();
         freezeWorklist.remove(u);
         simplifyWorklist.add(u);
         freezeMoves(u);
@@ -364,8 +364,8 @@ public class RegisterAllocator {
             }
 
             activeMoves.remove(m);
-            activeMoves.add(m);
-            if( freezeWorklist.contains(v) && nodeMoves(v).size() == 0){
+            frozenMoves.add(m);
+            if(freezeWorklist.contains(v) && nodeMoves(v).isEmpty()){
                 freezeWorklist.remove(v);
                 simplifyWorklist.add(v);
             }
@@ -373,9 +373,14 @@ public class RegisterAllocator {
     }
 
     public void selectSpill() {
-        //TODO: select which temp to spill: choose the one with longest live range
-
-        AAOperand m;
+        Long maxDegree = 0L;
+        AAOperand m = spillWorklist.iterator().next();
+        for (AAOperand node : spillWorklist) {
+            if (degree.get(node) > maxDegree) {
+                maxDegree = degree.get(node);
+                m = node;
+            }
+        }
         spillWorklist.remove(m);
         simplifyWorklist.add(m);
         freezeMoves(m);
@@ -407,18 +412,97 @@ public class RegisterAllocator {
         }
     }
 
-    public void rewriteProgram(HashSet<AAOperand> spilledNodes) {
+    public void rewriteProgram() {
+        HashSet<AAOperand> newTemps = new HashSet<>();
+        for (int i = 0; i < instructionList.size(); i++) {
+            AAInstruction a = instructionList.get(i);
+            AAOperand a1;
+            AAOperand a2;
 
+            if (a.operand1.isPresent()) {
+                a1 = a.operand1.get();
+                if (a1 instanceof AATemp && spilledNodes.contains(a1)) {
+                    tmpsp.spillTemp((AATemp) a1);
+                    AAImm offset = tmpsp.getOffsetOfTemp((AATemp) a1);
+                    AAMem mem = new AAMem();
+                    mem.setBase(Tiler.rbp);
+                    mem.setImmediate(offset);
+                    AATemp newTemp = tmpsp.newTemp();
+                    newTemps.add(newTemp);
+                    a.reseta1(newTemp);
+                    if (a.use().contains(a1)) {
+                        instructionList.add(i, new AAMove(newTemp, mem));
+                        i++;
+                    }
+                    if (a.def().contains(a1)) {
+                        i++;
+                        instructionList.add(i, new AAMove(mem, newTemp));
+                    }
+                }
+            }
+            if (a.operand2.isPresent()) {
+                a2 = a.operand2.get();
+                if (a2 instanceof AATemp && spilledNodes.contains(a2)) {
+                    tmpsp.spillTemp((AATemp) a2);
+                    AAImm offset = tmpsp.getOffsetOfTemp((AATemp) a2);
+                    AAMem mem = new AAMem();
+                    mem.setBase(Tiler.rbp);
+                    mem.setImmediate(offset);
+                    AATemp newTemp = tmpsp.newTemp();
+                    newTemps.add(newTemp);
+                    a.reseta1(newTemp);
+                    if (a.use().contains(a2)) {
+                        instructionList.add(i, new AAMove(newTemp, mem));
+                        i++;
+                    }
+                    if (a.def().contains(a2)) {
+                        i++;
+                        instructionList.add(i, new AAMove(mem, newTemp));
+                    }
+                }
+            }
+        }
+        spilledNodes = new HashSet<>();
+        initial = union(union(coloredNodes, coalescedNodes), newTemps);
+        coloredNodes = new HashSet<>();
+        coalescedNodes = new HashSet<>();
+    }
+
+    private void allocateAndRemove() {
+        List<AAInstruction> remove = new ArrayList<>();
+        for (AAInstruction a : instructionList) {
+            AAOperand a1;
+            AAOperand a2;
+
+            if (a.operand1.isPresent()) {
+                a1 = a.operand1.get();
+                if (a1 instanceof AATemp) {
+                    NodeColor c = color.get(a1);
+                    a.reseta1(c.colorToReg());
+                }
+            }
+            if (a.operand2.isPresent()) {
+                a2 = a.operand2.get();
+                if (a2 instanceof AATemp) {
+                    NodeColor c = color.get(a2);
+                    a.reseta1(c.colorToReg());
+                }
+            }
+            if (a instanceof AAMove && a.operand1.get().equals(a.operand2.get())) {
+                remove.add(a);
+            }
+        }
+        instructionList.removeAll(remove);
     }
 
     /**
      * Helper function to take the union of two sets
-     * @param set1
-     * @param set2
+     * @param set1 first set
+     * @param set2 second set
      * @return a hashset that is the union of two set
      * */
-    private HashSet union(HashSet set1, HashSet set2){
-        HashSet union = new HashSet(set1);
+    private <T> HashSet<T> union(HashSet<T> set1, HashSet<T> set2){
+        HashSet<T> union = new HashSet<>(set1);
         union.addAll(set2);
         return union;
     }
